1999-07-29    <redman@scriptics.com>

	* win/tclWinChan.c: Allow tcl to open CON and NUL, even for std
	channels.  Checking for bad/unusable std channels was moved to Tk
	since its only purpose was to check whether to use the Tk Console
	Window for the std channels.  [Bug: 2393 2392 2209 2458]

	* unix/mkLinks.tcl: Applied patch to avoid linking pack.n to
	pack-old.n.  Patch from Don Porter. [Bug: 2469]

	* doc/Encoding.n: Applied patch to fix typo in .SH NAME line.
	Patch from Don Porter.  [Bug: 2451]
	
	* win/tclWinSock.c:  Free Win32 Event handles when destroying
	the socket helper thread.

1999-07-28    <jenn@scriptics.com>

	* tests/tcltest.test:
	* library/tcltest1.0/tcltest.tcl: Fixed the condition under which
	::tcltest::PrintError had an infinite loop problem and added a
	test case for it.  Added an optional argument to
	::tcltest::getMatchingFiles telling it where to search for test
	files. 

1999-07-27    <redman@scriptics.com>

	* tools/tclSplash.bmp:  Updated Windows installer bitmap
	to ready Tcl/Tk Version 8.2.

1999-07-26    <redman@scriptics.com>

	* tests/tcltest.test:  Need to close the new core file, there
	seems to be a hang in threaded WinNT if the file isn't closed.
	Open issue, need to fix that hang.

	* tests/httpold.test:  Add time delay in response from Http server
	so that test cases can properly detect timeout conditions with
	threads enabled on multi-CPU WinNT.

	* tests/winFCmd.test:  Test case winFcmd-1.33 was looking for
	c:\windows, which may not exist.  Instead, create a new directory
	on c:\ and use it for the test.

	* win/tclWinConsole.c:
	* win/tclWinPipe.c:
	* win/tclWinSock.c:  Fix terminating helper threads by holding any
	mutexes from the primary thread while waiting for the helper
	thread to terminate.  Without these changes, the test suite hangs
	on WinNT with 2 CPUs and threads enabled.  Open issue, seems to be
	a sporadic hang on dual CPU systems still (very rare).

1999-07-26  Jennifer Hom  <jenn@scriptics.com>
